# ghazal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ghazal_customisations/: api.py  hooks.py  install.py  leave_surrender_validation.py  modules.txt
ghazal_customisations/config/: desktop.py  docs.py
ghazal_customisations/custom_property_list/: custom_field.py  property_field.py
ghazal_customisations/fixtures/: custom_html_block.json
ghazal_customisations/public/js/: hr_policy_filter.js  incentive_adding.js  salary_slip_add_esi.js
ghazal_customisations/public/python/: sharing_incentive.py
