[project]
name = "ghazal_customisations"
authors = [
    { name = "Jishnusuni", email = "jishnu-suni@buildsuite.io"}
]
description = "**Ghazal Project** is a custom ERPNext application designed to streamline business operations by integrating tailored workflows, custom doctypes, and automation features. It extends ERPNext functionality to meet specific business needs, including custom reports, permissio"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
